# StemBleedReclaimer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RUN_STEM_BLEED_RECLAIMER.bat  SETUP_ONCE.bat  pyproject.toml
docs/: FULL_LENGTH_IR_BLEED_PAINTING.md  NOISE_PROFILE_DENOISER.md  PRODUCT_CONTRACT.md  REAL_FOUR_VS_FIVE_RESULT_20260715.md  REAL_STEM_RELATION_FINDINGS_20260715.md
proof/: PROOF.md  generate_ir_paint_proof.py  generate_proof.py  run_real_four_vs_five.py
src/stem_bleed_reclaimer/: __init__.py  cli.py  core.py  diagnose_cli.py  ir_bleed_painter.py  ir_paint_cli.py  leakage_diagnostics.py  mix_conservation.py
tests/: test_bleed_cleaner.py  test_ir_bleed_painter.py  test_leakage_diagnostics.py  test_mix_conservation.py
