[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stem-bleed-reclaimer"
version = "0.1.0"
description = "Identity-aware attribution and conservative removal of cross-stem bleed."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "soundfile>=0.12"]

[project.scripts]
stem-bleed-reclaimer = "stem_bleed_reclaimer.cli:main"
stem-bleed-diagnose = "stem_bleed_reclaimer.diagnose_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
